# Job_portal

./: .gitignore  .replit  README.md  app.py  job_portal.db  pyproject.toml  replit.md
database/: database.py  models.py
pages/: 1_Job_Postings.py  2_Apply_for_Jobs.py  3_Admin_Dashboard.py  login.py
utils/: auth.py  data_store.py  db_data_store.py  job_matcher.py  resume_parser.py
